--- a/bin/data/branfort/todo.txt
+++ b/bin/data/branfort/todo.txt
@@ -1,6 +1,5 @@
-output
 menu
-	step
-	play
-	clear
+	help file
+	confirmation for clearing program
+	slider inertia
 copy/paste integrated in program memory
